# ReverbWave

./: .gitignore  .replit  CLAUDE.md  CMakeLists.txt  CrossPlatformCompatibility.md  CustomReverbPlugin.jucer  HarmonicDetuningFeature.md  Integration.cpp  IntegrationDemo  JUCE_Integration_Notes.md  ProjectSummary.md  README.md  ReverbGUI  ReverbWavePhase2Tests  SimpleReverb  SimpleReverb.cpp  SimpleReverb.cpp.add  SimpleReverb.cpp.backup  SimpleReverb.cpp.bak  SimpleReverb.cpp.clean  SimpleReverb.cpp.new  SimplifiedReverbOverview.md  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumAnalyzerJUCE.cpp  WindowsCompatibility.md  WindowsCompatibilityImplementation.md  build_windows.bat  harmonic_detuning.cpp  harmonic_detuning.h  harmonic_variables.cpp  juce_plugin_build.cmake  juce_vst3_helper  makefile  processStereo_updated.cpp  replit.nix  terminal_funcs.cpp
GUI/: ReverbGUI.cpp
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: PluginEditor.cpp  PluginEditor.cpp.add  PluginEditor.cpp.body  PluginEditor.cpp.preset  PluginEditor.h  PluginEditor.h.add  PluginProcessor.cpp  PluginProcessor.cpp.add  PluginProcessor.cpp.body  PluginProcessor.cpp.new  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumAnalyzerJUCE.cpp  harmonic_detuning.cpp
Tests/: JuceHeader.h  Phase2-RealRefactoringTests.cpp  README.md  SimpleTest.cpp
Tests/Phase2-JUCE-Integration/: BufferTests.cpp  DSPTests.cpp  ParameterTests.cpp  TestMain.cpp
build-vst/: CMakeCache.txt  Makefile  cmake_install.cmake  juce_vst3_helper
build-vst/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build-vst/JUCE/modules/: Makefile  cmake_install.cmake
build-vst/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-vst/JUCE/tools/modules/: Makefile
build-vst/ReverbVST_artefacts/JuceLibraryCode/: Info.txt
build-vst/ReverbVST_artefacts/JuceLibraryCode/Release/: Defs.txt
